# whisper-catch-sys-voice

./: .gitignore  Package.swift  README.md  SystemAudioCapture  flet.config.json  main.py  pyproject.toml  requirements.txt  whisper.py
Sources/: main.swift
helper/: openai.py  translator.py  whisper.py
